dev: add global loading store

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -35,6 +36,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App.loading {
+  cursor: wait;
 }
 
 .App > main {
